<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_select_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regular_margin"
        android:text="@string/select_level"
        android:textSize="@dimen/headline_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_test_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:text="@string/test_level" />

    <Button
        android:id="@+id/btn_easy_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/easy_level" />

    <Button
        android:id="@+id/btn_normal_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/normal_level" />

    <Button
        android:id="@+id/btn_hard_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/regular_margin"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/hard_level" />

</LinearLayout>