<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameResult"
            type="com.example.android.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_emoji"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/huge_margin"
            android:contentDescription="@string/game_over"
            app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:winner="@{gameResult.winner}"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_margin"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintBottom_toTopOf="@id/tv_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            tools:text="@string/required_score" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_margin"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percent_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
            app:rightAnswers="@{gameResult.countOfRightAnswers}"
            tools:text="@string/score_answers" />

        <TextView
            android:id="@+id/tv_required_percent_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_margin"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintBottom_toTopOf="@id/tv_percent_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_score"
            app:requiredRightAnswersPercent="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            tools:text="@string/required_percentage" />

        <TextView
            android:id="@+id/tv_percent_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regular_margin"
            android:textSize="@dimen/bigger_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percent_answers"
            app:rightAnswersPercent="@{gameResult}"
            tools:text="@string/score_percentage" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>