<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.fragments.WelcomeFragment">

            <ImageView
                android:id="@+id/img_brain"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/brain_image_height"
                android:layout_margin="@dimen/big_margin"
                android:contentDescription="@string/welcome_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_brain" />

            <TextView
                android:id="@+id/tv_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/regular_margin"
                android:text="@string/composition"
                android:textSize="@dimen/headline_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_brain" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/regular_margin"
                android:text="@string/game_rules"
                android:textSize="@dimen/regular_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_headline" />

            <Button
                android:id="@+id/btn_understood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/understood"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>